// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OutboundIntegrationHandlerWeather > should return daily 1`] = `
[
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 4.9,
    },
    "info": {
      "country": "Turkey",
      "location": "Mersin",
      "region": "Mersin",
    },
    "outputKey": "HDD",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 0,
    },
    "info": {
      "country": "Turkey",
      "location": "Mersin",
      "region": "Mersin",
    },
    "outputKey": "CDD",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 56,
    },
    "info": {
      "country": "Turkey",
      "location": "Mersin",
      "region": "Mersin",
    },
    "outputKey": "HUMIDITY",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 13.4,
    },
    "info": {
      "country": "Turkey",
      "location": "Mersin",
      "region": "Mersin",
    },
    "outputKey": "TEMPERATURE",
  },
  {
    "data": {
      "datetime": "2025-04-16T00:00:00.000Z",
      "value": 0,
    },
    "info": {
      "country": "Turkey",
      "location": "Mersin",
      "region": "Mersin",
    },
    "outputKey": "RAIN",
  },
]
`;

exports[`OutboundIntegrationHandlerWeather > should return minutely 1`] = `
[
  {
    "data": {
      "datetime": "2025-08-07T11:30:00.000Z",
      "value": 0,
    },
    "info": {
      "country": "Turkey",
      "location": "Mersin",
      "region": "Mersin",
    },
    "outputKey": "HDD",
  },
  {
    "data": {
      "datetime": "2025-08-07T11:30:00.000Z",
      "value": 10.899999999999999,
    },
    "info": {
      "country": "Turkey",
      "location": "Mersin",
      "region": "Mersin",
    },
    "outputKey": "CDD",
  },
  {
    "data": {
      "datetime": "2025-08-07T11:30:00.000Z",
      "value": 71,
    },
    "info": {
      "country": "Turkey",
      "location": "Mersin",
      "region": "Mersin",
    },
    "outputKey": "HUMIDITY",
  },
  {
    "data": {
      "datetime": "2025-08-07T11:30:00.000Z",
      "value": 29.2,
    },
    "info": {
      "country": "Turkey",
      "location": "Mersin",
      "region": "Mersin",
    },
    "outputKey": "TEMPERATURE",
  },
  {
    "data": {
      "datetime": "2025-08-07T11:30:00.000Z",
      "value": 0,
    },
    "info": {
      "country": "Turkey",
      "location": "Mersin",
      "region": "Mersin",
    },
    "outputKey": "RAIN",
  },
]
`;
